# 안내:
# 1. 주요 의존성 출처를 pyproject.toml 로 일원화합니다.
# 2. 실행 환경은 uv.lock 으로 고정하여, 머신마다 서로 다른 버전 조합이 해석되는 것을 방지합니다.
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "moneyprinterturbo"
version = "1.2.8"
description = "Generate short videos from prompts, local assets, subtitles, and TTS."
readme = "README-en.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "moviepy==2.1.2",
    "streamlit==1.45.0",
    "edge-tts==7.2.7",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "openai==1.56.1",
    "faster-whisper==1.1.0",
    "loguru==0.7.3",
    "google-generativeai==0.8.6",
    "dashscope==1.20.14",
    "azure-cognitiveservices-speech==1.41.1",
    "redis==5.2.0",
    "python-multipart==0.0.19",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "socksio==1.0.0",
    "pydub==0.25.1",
    "litellm==1.60.0",
]

[project.optional-dependencies]
g4f = [
    "g4f==0.5.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# 현재 프로젝트는 애플리케이션 실행 형태를 위주로 하며, 배포 가능한 Python 패키지로 설치하지 않습니다.
package = false
